--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,11 +46,11 @@ parking_lot = {version = "0.12.1", features = ["hardware-lock-elision"]}
 libc = "0.2.172"
 num_cpus = "1.16.0"
 syslog = "7.0.0"
-native-tls = { version = "0.2.14" }
+native-tls = { version = "0.2.14", features = ["vendored"] }
 tokio-native-tls = { version = "0.3.1" }
 serde-toml-merge = { version = "0.3.8"}
 jwt = { version = "0.16.0", features = ["openssl"] }
-openssl = { version = "0.10.72"}
+openssl = { version = "0.10.72", features = ["vendored"] }
 iota = { version = "0.2.3" }
 pin-project-lite = "0.2.16"
 pam-client = { version =  "0.5.0", optional = true }
