Доработки iserv под новую версию 3.X
- фильтрация DISCARD ALL в simple/extended с корректным порядком ответов
- min_pool_size: warm-up/поддержание, очистка молодых соединений
- больше закрытий за цикл (20)
- режим oldest_first для выдачи соединений
- finalize_checkin: pg_advisory_unlock_all + pgv_free
- фикс экранирования SET
- обновлён Dockerfile, vendored OpenSSL/native-tls для сборки

--- a/pg_doorman.toml
+++ b/pg_doorman.toml
@@ -170,6 +170,10 @@ worker_cpu_affinity_pinning = false
 # Default: false
 server_round_robin = false
 
+# Prefer oldest server connections first (overrides server_round_robin when true).
+# Default: false
+oldest_first = false
+
 # Sync server parameters (SET commands, application_name) across backends.
 # Disabled by default due to performance impact.
 # Consider using pool-level application_name instead.
